내일 다시 할래애ㅐㅐ애애애애애애애애애애

--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션1: 6\n",
+    "#솔루션1: 63.6점 --> 놓친 게 뭘까?!\n",
     "\n",
     "import string\n",
     "\n",
@@ -232,6 +232,168 @@
     "- 모든 경우에서 최적해를 도출하지는 않지만, 통하는 경우가 몇 가지 있다.\n",
     "\n",
     "(출처: https://www.zerocho.com/category/Algorithm/post/584ba5c9580277001862f188)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션2: 알파벳 간 이동에 필요한 조작 횟수 미리 계산 후 차감하는 방식 --> 63.6\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "letters = string.ascii_uppercase\n",
+    "\n",
+    "def solution(name):\n",
+    "    answer = 0\n",
+    "    name = list(name)\n",
+    "    answer += len(name) - 1\n",
+    "    for k in range(len(name)):\n",
+    "        cur_letter = name[k]\n",
+    "        plain_index = letters.index(cur_letter)\n",
+    "        clicks = plain_index if plain_index <= 13 else (26 - plain_index)\n",
+    "        answer += clicks\n",
+    "        \n",
+    "        if k < len(name)/2 and name[k+1] == 'A':\n",
+    "            answer += k - 1\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JEROEN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JAN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션3: \n",
+    "\n",
+    "import string\n",
+    "\n",
+    "letters = string.ascii_uppercase\n",
+    "\n",
+    "def solution(name):\n",
+    "    answer = 0\n",
+    "    name = list(name)\n",
+    "    answer += len(name) - 1\n",
+    "    for k in range(len(name)):\n",
+    "        cur_letter = name[k]\n",
+    "        plain_index = letters.index(cur_letter)\n",
+    "        clicks = plain_index if plain_index <= 13 else (26 - plain_index)\n",
+    "        answer += clicks\n",
+    "        \n",
+    "        if k < 1 and name[k+1] == \"A\":\n",
+    "            answer += k - 1\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JEROEN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JAN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-098076b7e303>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'J'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-1b4575efaa50>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mclicks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"A\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             \u001b[0manswer\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "solution('J')"
    ]
   },
   {
