--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -319,17 +319,48 @@
     "def solution(name):\n",
     "    answer = 0\n",
     "    name = list(name)\n",
-    "    answer += len(name) - 1\n",
-    "    for k in range(len(name)):\n",
-    "        cur_letter = name[k]\n",
-    "        plain_index = letters.index(cur_letter)\n",
-    "        clicks = plain_index if plain_index <= 13 else (26 - plain_index)\n",
+    "    non_A = [(letter, name.index(letter)) for letter in name if letter != \"A\"]\n",
+    "    for letter, idx in non_A:\n",
+    "        clicks = idx if idx <= 13 else (26 - idx)\n",
     "        answer += clicks\n",
-    "        \n",
+    "\n",
     "        if k < 1 and name[k+1] == \"A\":\n",
     "            answer += k - 1\n",
     "            \n",
     "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index1 = 2\n",
+    "index2 = 7\n",
+    "length = 7\n",
+    "\n",
+    "forward = index2-index1\n",
+    "backward = length-index2+index1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 3\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(forward, backward)\n",
+    "print(forward < backward)"
    ]
   },
   {
