오늘 다 풀고 잔다

--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -306,11 +306,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'A'), (1, 'B'), (2, 'C')]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(enumerate('ABC'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션3: \n",
+    "#솔루션3: 72.7\n",
     "\n",
     "import string\n",
     "\n",
@@ -318,15 +338,54 @@
     "\n",
     "def solution(name):\n",
     "    answer = 0\n",
-    "    name = list(name)\n",
-    "    non_A = [(letter, name.index(letter)) for letter in name if letter != \"A\"]\n",
-    "    for letter, idx in non_A:\n",
-    "        clicks = idx if idx <= 13 else (26 - idx)\n",
+    "    length = len(name)\n",
+    "    non_A = [(letters.index(letter), idx) for idx, letter in enumerate(name) if letter != \"A\"]\n",
+    "    \n",
+    "    print(\"initial non_A: \", non_A)\n",
+    "    \n",
+    "    cur = non_A.pop(0)\n",
+    "    \n",
+    "    print(\"initial cur: \", cur)\n",
+    "    while True: \n",
+    "        letter, idx = cur\n",
+    "        clicks = letter if letter <= 13 else (26 - letter)\n",
     "        answer += clicks\n",
     "\n",
-    "        if k < 1 and name[k+1] == \"A\":\n",
-    "            answer += k - 1\n",
+    "        if len(non_A) == 0:\n",
+    "            break\n",
     "            \n",
+    "        elif len(non_A) == 1:\n",
+    "            idx1 = non_A[0][1]\n",
+    "            forward = abs(idx - idx1)\n",
+    "            backward = length - abs(idx-idx1)\n",
+    "            clicks = forward if forward <= backward else backward\n",
+    "            answer += clicks\n",
+    "            cur = non_A.pop()\n",
+    "            \n",
+    "        else:\n",
+    "            idx1 = non_A[0][1]\n",
+    "            idx2 = non_A[-1][1]\n",
+    "            if min(idx, idx1, idx2) == idx:\n",
+    "                forward = abs(idx-idx1)\n",
+    "                backward = idx + length -idx2 + 1\n",
+    "            else:\n",
+    "                forward = length - idx + idx1 + 1\n",
+    "                backward = abs(idx-idx2)\n",
+    "            \n",
+    "            if forward <= backward:\n",
+    "                clicks = forward\n",
+    "                cur = non_A.pop(0)\n",
+    "                print(\"went forward\")\n",
+    "            else:\n",
+    "                clicks = backward\n",
+    "                cur = non_A.pop(-1)\n",
+    "                print(\"went backward\")\n",
+    "\n",
+    "            answer += clicks\n",
+    "            \n",
+    "        print(\"non_A: \", non_A)\n",
+    "        print(\"cur: \", cur)\n",
+    "        \n",
     "    return answer"
    ]
   },
@@ -365,16 +424,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial non_A:  [(9, 0), (4, 1), (17, 2), (14, 3), (4, 4), (13, 5)]\n",
+      "initial cur:  (9, 0)\n",
+      "went forward\n",
+      "non_A:  [(17, 2), (14, 3), (4, 4), (13, 5)]\n",
+      "cur:  (4, 1)\n",
+      "went forward\n",
+      "non_A:  [(14, 3), (4, 4), (13, 5)]\n",
+      "cur:  (17, 2)\n",
+      "went forward\n",
+      "non_A:  [(4, 4), (13, 5)]\n",
+      "cur:  (14, 3)\n",
+      "went forward\n",
+      "non_A:  [(13, 5)]\n",
+      "cur:  (4, 4)\n",
+      "non_A:  []\n",
+      "cur:  (13, 5)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "56"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,18 +466,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 96,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial non_A:  [(9, 0), (13, 2)]\n",
+      "initial cur:  (9, 0)\n",
+      "non_A:  []\n",
+      "cur:  (13, 2)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "23"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
