--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,8 +544,8 @@
     "    \n",
     "    condition  = idx < idx1\n",
     "    \n",
-    "    right = idx1-idx if condition else length - idx + idx1 + 1\n",
-    "    left = idx + length - idx2 + 1 if condition else idx - idx2\n",
+    "    right = idx1-idx if condition else length - idx + idx1\n",
+    "    left = idx + length - idx2 if condition else idx - idx2\n",
     "    \n",
     "    if right <= left:\n",
     "        return True, right\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,8 +613,8 @@
     "    \n",
     "    condition  = idx < idx1\n",
     "    \n",
-    "    right = idx1-idx if condition else length - idx + idx1 + 1\n",
-    "    left = idx + length - idx2 + 1 if condition else idx - idx2\n",
+    "    right = idx1-idx if condition else length - idx + idx1\n",
+    "    left = idx + length - idx2 if condition else idx - idx2\n",
     "    \n",
     "    if right <= left:\n",
     "        return True, right\n",
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "56"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "23"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
