--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -665,26 +665,78 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "i give up!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "you win!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b"
+    "#솔루션5:\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "letters = string.ascii_uppercase\n",
+    "\n",
+    "def single_element(cur, remaining, length):\n",
+    "    idx = cur[1]\n",
+    "    idx1 = remaining[0][1]\n",
+    "    right = abs(idx-idx1)\n",
+    "    left = length - abs(idx-idx1)\n",
+    "    return right if right <= left else left\n",
+    "\n",
+    "def multiple_element(cur, remaining, length):\n",
+    "    idx = cur[1]\n",
+    "    idx1 = remaining[0][1]\n",
+    "    idx2 = remaining[-1][1]\n",
+    "    \n",
+    "    condition  = idx < idx1\n",
+    "    \n",
+    "    right = idx1-idx if condition else length - idx + idx1\n",
+    "    left = idx + length - idx2 if condition else idx - idx2\n",
+    "    \n",
+    "    if right <= left:\n",
+    "        return True, right\n",
+    "    \n",
+    "    else:\n",
+    "        cur = remaining.pop(-1)\n",
+    "        return False, left   \n",
+    "\n",
+    "def solution(name):\n",
+    "    answer = 0\n",
+    "    length = len(name)\n",
+    "    non_A = [(letters.index(letter), idx) for idx, letter in enumerate(name) if letter != \"A\"]\n",
+    "    \n",
+    "    #처음/마지막 어디서 시작할지\n",
+    "    first = non_A[0][1]\n",
+    "    last = length - non_A[-1][1] \n",
+    "    if first <= last:\n",
+    "        cur = non_A.pop(0)\n",
+    "        answer += first\n",
+    "    else:\n",
+    "        cur = non_A.pop(-1)\n",
+    "        answer += last\n",
+    "        \n",
+    "    while True: \n",
+    "        letter, idx = cur\n",
+    "        \n",
+    "        clicks = letter if letter <= 13 else (26 - letter)\n",
+    "        answer += clicks\n",
+    "\n",
+    "        if len(non_A) == 0:\n",
+    "            break\n",
+    "            \n",
+    "        elif len(non_A) == 1:\n",
+    "            answer += single_element(cur, non_A, length)\n",
+    "            cur = non_A.pop()\n",
+    "            \n",
+    "        else:\n",
+    "            go_right, clicks = multiple_element(cur, non_A, length)\n",
+    "            answer += clicks\n",
+    "            if go_right:\n",
+    "                cur = non_A.pop(0)\n",
+    "            else:\n",
+    "                cur = non_A.pop(-1)\n",
+    "        \n",
+    "    return answer"
    ]
   }
  ],
