--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -665,59 +665,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "처음부터 다시 풀자 그냥"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = list('hello')\n",
+    "\n",
+    "any(name) != 'e'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'AAAA'\n",
+    "'A' in name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#솔루션5:\n",
+    "#솔루션5: 45.5ㅋㅋㅋㅋㅋㅋㅋㅋ\n",
     "\n",
     "import string\n",
     "\n",
     "letters = string.ascii_uppercase\n",
     "\n",
-    "def single_element(cur, remaining, length):\n",
-    "    idx = cur[1]\n",
-    "    idx1 = remaining[0][1]\n",
-    "    right = abs(idx-idx1)\n",
-    "    left = length - abs(idx-idx1)\n",
-    "    return right if right <= left else left\n",
+    "def solution(name):\n",
+    "    \n",
+    "    answer = 0\n",
     "\n",
-    "def multiple_element(cur, remaining, length):\n",
-    "    idx = cur[1]\n",
-    "    idx1 = remaining[0][1]\n",
-    "    idx2 = remaining[-1][1]\n",
-    "    \n",
-    "    condition  = idx < idx1\n",
-    "    \n",
-    "    right = idx1-idx if condition else length - idx + idx1\n",
-    "    left = idx + length - idx2 if condition else idx - idx2\n",
-    "    \n",
-    "    if right <= left:\n",
-    "        return True, right\n",
-    "    \n",
-    "    else:\n",
-    "        cur = remaining.pop(-1)\n",
-    "        return False, left   \n",
+    "    #up_down\n",
+    "    for letter in name:\n",
+    "        index = letters.index(letter)\n",
+    "        up_down = index if index <= 13 else 26-index\n",
+    "        answer += up_down\n",
+    "\n",
+    "    #left_right\n",
+    "    if 'A' not in name:\n",
+    "        answer += len(name) - 1\n",
+    "    if 'A' in name:\n",
+    "        non_A_index = [name.index(letter) for letter in name if letter != 'A']\n",
+    "        if 0 not in non_A_index: non_A_index.insert(0, 0)   # 'A'로 시작할 경우\n",
+    "        cur = non_A_index.pop(0)\n",
+    "        \n",
+    "        while len(non_A_index) >= 2:\n",
+    "            right = non_A_index[0]\n",
+    "            left = non_A_index[-1]\n",
+    "            if min(cur, right, left) == cur:\n",
+    "                forward = right - cur\n",
+    "                backward = cur + len(name) - right\n",
+    "\n",
+    "            else:\n",
+    "                forward = length - cur + left\n",
+    "                backward = cur - right\n",
+    "            \n",
+    "            if backward < forward:\n",
+    "                anwer += backward\n",
+    "                cur = non_A_index.pop()\n",
+    "            else:\n",
+    "                answer += forward\n",
+    "                cur = non_A_index.pop(0)\n",
+    "                \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JEROEN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JAN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('AAJ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('J')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#솔루션6: 드디어 통과.......ㅠㅠㅠㅠㅠ 나 울거야 엉엉\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "letters = string.ascii_uppercase\n",
     "\n",
     "def solution(name):\n",
     "    answer = 0\n",
     "    length = len(name)\n",
     "    non_A = [(letters.index(letter), idx) for idx, letter in enumerate(name) if letter != \"A\"]\n",
     "    \n",
-    "    #처음/마지막 어디서 시작할지\n",
-    "    first = non_A[0][1]\n",
-    "    last = length - non_A[-1][1] \n",
-    "    if first <= last:\n",
-    "        cur = non_A.pop(0)\n",
-    "        answer += first\n",
-    "    else:\n",
-    "        cur = non_A.pop(-1)\n",
-    "        answer += last\n",
-    "        \n",
+    "    if name[0] == 'A': non_A.insert(0, (0, 0))\n",
+    "    \n",
+    "    cur = non_A.pop(0)\n",
+    "    \n",
     "    while True: \n",
     "        letter, idx = cur\n",
-    "        \n",
     "        clicks = letter if letter <= 13 else (26 - letter)\n",
     "        answer += clicks\n",
     "\n",
@@ -725,19 +875,122 @@
     "            break\n",
     "            \n",
     "        elif len(non_A) == 1:\n",
-    "            answer += single_element(cur, non_A, length)\n",
+    "            idx1 = non_A[0][1]\n",
+    "            forward = abs(idx - idx1)\n",
+    "            backward = length - abs(idx-idx1)\n",
+    "            clicks = forward if forward <= backward else backward\n",
+    "            answer += clicks\n",
     "            cur = non_A.pop()\n",
     "            \n",
     "        else:\n",
-    "            go_right, clicks = multiple_element(cur, non_A, length)\n",
-    "            answer += clicks\n",
-    "            if go_right:\n",
-    "                cur = non_A.pop(0)\n",
+    "            idx1 = non_A[0][1]\n",
+    "            idx2 = non_A[-1][1]\n",
+    "            if min(idx, idx1, idx2) == idx:\n",
+    "                forward = abs(idx-idx1)\n",
+    "                backward = idx + length -idx2\n",
     "            else:\n",
+    "                forward = length - idx + idx1\n",
+    "                backward = abs(idx-idx2)\n",
+    "            \n",
+    "            if forward <= backward:\n",
+    "                clicks = forward\n",
+    "                cur = non_A.pop(0)\n",
+    "\n",
+    "            else:\n",
+    "                clicks = backward\n",
     "                cur = non_A.pop(-1)\n",
-    "        \n",
+    "\n",
+    "            answer += clicks\n",
+    "\n",
     "    return answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JEROEN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('JAN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('J')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution('AAJ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
