다른 사람 풀이: 조이스틱:

--- a/programmers/lev2q10_조이스틱_0828.ipynb
+++ b/programmers/lev2q10_조이스틱_0828.ipynb
@@ -991,6 +991,45 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#다른 사람 풀이\n",
+    "def solution(name):\n",
+    "    count=0\n",
+    "    alpha='ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+    "    d={}\n",
+    "    indexes=[]\n",
+    "    current_idx=0\n",
+    "    n=len(name)\n",
+    "    for i in range(len(alpha)):\n",
+    "        d[alpha[i]]=min(i,26-i)\n",
+    "    #print(d)\n",
+    "    for i in range(n):\n",
+    "        num=d[name[i]]\n",
+    "        count+=num\n",
+    "        if num !=0 :\n",
+    "            indexes.append(i)\n",
+    "    while True:\n",
+    "        if len(indexes)==0:\n",
+    "            break\n",
+    "        min_dist=99\n",
+    "        min_idx=0\n",
+    "        for it in indexes:\n",
+    "            min_dist2=min(abs(it-current_idx),n-abs(it-current_idx))\n",
+    "            if min_dist2 < min_dist:\n",
+    "                min_dist=min_dist2\n",
+    "                min_idx=it\n",
+    "        count+=min_dist\n",
+    "        indexes.remove(min_idx)\n",
+    "        current_idx = min_idx\n",
+    "\n",
+    "    return count"
+   ]
   }
  ],
  "metadata": {
