다른 사람 풀이 lev3q01

--- a/programmers/lev3q01_추석트래픽_0906.ipynb
+++ b/programmers/lev3q01_추석트래픽_0906.ipynb
@@ -261,6 +261,50 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#다른 사람 풀이\n",
+    "def solution(lines):\n",
+    "\n",
+    "    #get input\n",
+    "    S , E= [], [] \n",
+    "    totalLines = 0 \n",
+    "    for line in lines:\n",
+    "        totalLines += 1\n",
+    "        type(line)\n",
+    "        (d,s,t) = line.split(\" \")\n",
+    "\n",
+    "       ##time to float\n",
+    "        t = float(t[0:-1])\n",
+    "        (hh, mm, ss) = s.split(\":\")\n",
+    "        seconds = float(hh) * 3600 + float(mm) * 60 + float(ss)\n",
+    "\n",
+    "        E.append(seconds + 1)\n",
+    "        S.append(seconds - t + 0.001)\n",
+    "\n",
+    "    #count the maxTraffic\n",
+    "    S.sort()\n",
+    "\n",
+    "    curTraffic = 0\n",
+    "    maxTraffic = 0\n",
+    "    countE = 0\n",
+    "    countS = 0\n",
+    "    while((countE < totalLines) & (countS < totalLines)):\n",
+    "        if(S[countS] < E[countE]):\n",
+    "            curTraffic += 1\n",
+    "            maxTraffic = max(maxTraffic, curTraffic)\n",
+    "            countS += 1\n",
+    "        else: ## it means that a line is over.\n",
+    "            curTraffic -= 1\n",
+    "            countE += 1\n",
+    "\n",
+    "    return maxTraffic"
+   ]
   }
  ],
  "metadata": {
