--- a/programmers/lev3q02_지형이동_0907.ipynb
+++ b/programmers/lev3q02_지형이동_0907.ipynb
@@ -121,11 +121,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "--> sort into groups maybe?"
+   ]
   },
   {
    "cell_type": "code",
