cut me some slack

--- a/programmers/lev3q02_지형이동_0907.ipynb
+++ b/programmers/lev3q02_지형이동_0907.ipynb
@@ -121,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-> put them into groups"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
