--- a/programmers/lev3q02_지형이동_1015.ipynb
+++ b/programmers/lev3q02_지형이동_1015.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://programmers.co.kr/learn/courses/30/lessons/62050"
+    "https://programmers.co.kr/learn/courses/30/lessons/62050\n",
+    "\n",
+    "인간적으로 너무 어려운 거 아니냐 이것들아"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +50,7 @@
        "       [10, 10, 10, 20]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +70,7 @@
        "array([ 1,  5, 10, 10])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,16 +81,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strip = land[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  5, 10, 10],\n",
-       "       [ 4,  5, 10, 10],\n",
-       "       [ 8,  5, 10, 10],\n",
-       "       [10,  5, 10, 20]])"
+       "array([ 1,  5, 10, 10])"
       ]
      },
      "execution_count": 9,
@@ -97,27 +105,76 @@
     }
    ],
    "source": [
-    "land.transpose()"
+    "strip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "(4, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "land[1, 1]"
+    "land.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "height = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 5), (5, 10)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(i, j) for i, j in zip(strip[:-1], strip[1:]) if abs(i-j) > height]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "land[(0, 3)]"
    ]
   },
   {
@@ -132,11 +189,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#솔루션 1:\n",
     "\n",
+    "import numpy as np\n",
     "\n",
     "def solution(land, height):\n",
+    "    land = np.array(land)\n",
+    "    \n",
     "    answer = 0\n",
     "    return answer"
    ]
