work in progress

--- a/programmers/lev3q02_지형이동_1015.ipynb
+++ b/programmers/lev3q02_지형이동_1015.ipynb
@@ -210,17 +210,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  4,  8, 10],\n",
+       "       [ 5,  5,  5,  5],\n",
+       "       [10, 10, 10, 10],\n",
+       "       [10, 10, 10, 20]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "land"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  5, 10, 10])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "land[:, 0]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def check_hor(land, height):  #가로로 그룹핑\n",
+    "    groups = []\n",
+    "    for k in land.shape[0]:\n",
+    "        strip = land[k, :]\n",
+    "        \n",
+    "    return groups\n",
+    "\n",
+    "def check_ver(land, height):   #세로로 그룹핑\n",
+    "    groups = []\n",
+    "    for k in land.shape[1]:\n",
+    "        \n",
+    "    return groups\n",
+    "\n",
+    "def concat(hor_groups, ver_groups, height):   #가로 세로 그룹 대조해서 그룹 합치기\n",
+    "    concatenated = []\n",
+    "    return concatenated\n",
+    "\n",
+    "def calc_cost(groups):   #그룹핑 결과로 최소 비용 계산하기\n",
+    "    \n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "land.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([[1, 1],\n",
+    "        [2, 2],\n",
+    "        [3, 3]]).shape"
+   ]
   },
   {
    "cell_type": "code",
